--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Folder
 train
 val
+train_
+val_
 test
 train_images
 train_annotations
@@ -10,6 +12,7 @@ venv
 .venv
 __pycache__
 wandb
+runs
 
 # File
 *.pt
