--- a/book.yaml
+++ b/book.yaml
@@ -8,16 +8,19 @@
 
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
-path: ./  # dataset root dir
+path: /workspace/  # dataset root dir
 train: train/images  # train images (relative to 'path') 128 images
 val: val/images  # val images (relative to 'path') 128 images
-test:  # test images (optional)
 
 # Classes
+nc: 9
 names:
-  0: background
-  1: overall  
-  2: handwritten
-  3: typography
-  4: illustration
-  5: stamp
+  - 1_overall  
+  - 2_handwritten
+  - 3_typography
+  - 4_illustration
+  - 5_stamp
+  - 6_headline
+  - 7_caption
+  - 8_textline
+  - 9_table
