--- a/book.yaml
+++ b/book.yaml
@@ -13,14 +13,15 @@ train: train/images  # train images (relative to 'path') 128 images
 val: val/images  # val images (relative to 'path') 128 images
 
 # Classes
-nc: 9
+nc: 10
 names:
-  - 1_overall  
-  - 2_handwritten
-  - 3_typography
-  - 4_illustration
-  - 5_stamp
-  - 6_headline
-  - 7_caption
-  - 8_textline
-  - 9_table
+  0: 0_background
+  1: 1_overall  
+  2: 2_handwritten
+  3: 3_typography
+  4: 4_illustration
+  5: 5_stamp
+  6: 6_headline
+  7: 7_caption
+  8: 8_textline
+  9: 9_table
