--- a/modern_book.yaml
+++ b/modern_book.yaml
@@ -9,8 +9,8 @@
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
 path: /workspace/  # dataset root dir
-train: train/mordern/images  # train images (relative to 'path') 128 images
-val: val/mordern/images  # val images (relative to 'path') 128 images
+train: train/modern/images  # train images (relative to 'path') 128 images
+val: val/modern/images  # val images (relative to 'path') 128 images
 
 # Classes
 nc: 10
